# github-actions-demo

./: pyproject.toml
.github/workflows/: ci.yml  deployment.yml  flask_test.yml
app/: main.py  main_test.py
app/tests/: main_test.py
src/: main.py
tests/: main_test.py
