[tool.poetry]
name = "github-actions-demo"
version = "0.1.0"
description = ""
authors = ["Kuba <a5h3k14s15@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
flask = "^3.1.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
