[tool.poetry]
name = "github-actions-demo"
version = "0.1.0"
description = ""
authors = ["waasabi"]
readme = "README.md"

packages = [
    { include = "app/src" }
]

[tool.poetry.dependencies]
python = "^3.13"
flask = "^3.1.0"
python-dotenv = "^1.0.1"
pyyaml = "^6.0.2"
pytest = "^8.3.5"


[build-system]
requires = ["poetry-core", "wheel"]
build-backend = "poetry.core.masonry.api"
